app/src/components/main/modal/modalLayout/modalFooter/modalFooter.scss
.modal-footer {
  position: relative;
  display: table;
  width: 100%;
}
.warning-block-wrap {
  position: relative;

  .warning-block {
    padding-right: 10px;
  }
}
.warning-block {
  display: table-cell;
  padding-right: 20px;
  box-sizing: border-box;
  vertical-align: middle;

  .warning-icon {
    position: absolute;
    top: 50%;
    left: 0;
    display: inline-block;
    width: 16px;
    height: 16px;
    margin-top: -8px;
    background-image: url(./img/warning-icon.svg);
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center;
  }
  .warning-message {
    display: inline-block;
    padding-left: 25px;
    box-sizing: border-box;
    font-family: $FONT-REGULAR;
    font-size: 10px;
    line-height: 1.4;
    color: $COLOR--failed;
  }
}
.buttons-block {
  float: right;
  white-space: nowrap;
  display: flex;
  justify-content: space-between;
  align-content: flex-end;
  flex-direction: row-reverse;
}

.button-container {
  display: inline-block;
  height: 30px;
  min-width: 70px;
  margin-right: 10px;

  &:last-child {
    margin-right: 0;
  }

  button {
    font-size: 13px;
  }
}
.permission-footer {
  display: none;
}
.confirmation-block {
  display: flex;
  float: left;
}
.confirmation-label {
  font-size: 10px;
  line-height: 13px;
}

